# notcurses

./: meson.build
src/lib/: builddef.h  meson.build  version.h
src/libcpp/: meson.build
