c_sources = files(
  'gpm.c',
  'in.c',
  'kitty.c',
  'layout.c',
  'linux.c',
  'menu.c',
  'metric.c',
  'mice.c',
  'notcurses.c',
  'plot.c',
  'progbar.c',
  'reader.c',
  'reel.c',
  'render.c',
  'selector.c',
  'sixel.c',
  'sprite.c',
  'stats.c',
  'tabbed.c',
  'termdesc.c',
  'tree.c',
  'unixsig.c',
  'util.c',
  'visual.c',
  'windows.c'
)